# snake-game

./: .gitattributes  .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  conanfile.txt  graph_info.json
src/: Color.cpp  Color.hpp  Food.cpp  Food.hpp  Game.cpp  Game.hpp  GameState.hpp  InputHandler.cpp  InputHandler.hpp  PowerUp.cpp  PowerUp.hpp  PowerUpType.hpp  Renderer.cpp  Renderer.hpp  Snake.cpp  Snake.hpp  SoundManager.cpp  SoundManager.hpp  Vector2.hpp  main.cpp
